added head and body tags

--- a/Dev-Dreamer/index.html
+++ b/Dev-Dreamer/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+      <title>Dev Dreamer | HTML lessonss</title>
+      <meta charset="utf-8">
+      <meta name="author" content="Ikanyeng">
+      <meta name="description " content="HTML">
+      <meta name="keywords", content="coding">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="icon" href="p2.jpg">
+      <link rel="stylesheet" href="style.css">
+    </head>
     <body>
       <p>Hello world</p>
       <a title="hey there" href="http://www.google.com" target="_blank">go to google</a>
+      <img src="P1.jpg">
     </body>
 </html>
